--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Popular Movies</string>
+    <string name="retry_button_description">Retry button</string>
+    <string name="movie_poster_description">Movie poster</string>
 </resources>
