Menu for changing between top rated and most popular movies
Signed-off-by: Eduardo Carrara <ecarrara.araujo@gmail.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">Popular Movies</string>
     <string name="retry_button_description">Retry button</string>
     <string name="movie_poster_description">Movie poster</string>
+    <string name="top_rated">Top Rated</string>
+    <string name="most_popular">Most Popular</string>
 </resources>
