Movie Detail Functionality
Signed-off-by: Eduardo Carrara <ecarrara.araujo@gmail.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="movie_poster_description">Movie poster</string>
     <string name="top_rated">Top Rated</string>
     <string name="most_popular">Most Popular</string>
+    <string name="synopsis">Synopsis</string>
+    <string name="rating">Rating</string>
 </resources>
