feature: trailers - open trailer on youtube
Signed-off-by: Eduardo Carrara <ecarrara.araujo@gmail.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="rating">Rating</string>
     <string name="play_trailer_button">play trailer button</string>
     <string name="error_fetching_movie_trailers">Error fetching movie trailers</string>
+    <string name="trailer_player_chooser_title">Play trailer on …</string>
 </resources>
