refactor: change the way rating is displayed
Signed-off-by: Eduardo Carrara <ecarrara.araujo@gmail.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,7 @@
     <string name="play_trailer_button">play trailer button</string>
     <string name="error_fetching_movie_trailers">Error fetching movie trailers</string>
     <string name="trailer_player_chooser_title">Play trailer on …</string>
+    <string name="indication_of_the_movie_rating">Indication of the movie rating</string>
+
+    <string name="movie_detail_rating_format" translatable="false">%1$.1f</string>
 </resources>
