--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="indication_of_the_movie_rating">Indication of the movie rating</string>
 
     <string name="movie_detail_rating_format" translatable="false">%1$.1f</string>
+    <string name="favorites">Favorites</string>
 </resources>
