feature: change app name to My Movies
Signed-off-by: Eduardo Carrara <ecarrara.araujo@gmail.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Popular Movies</string>
+    <string name="app_name">My Movies</string>
     <string name="retry_button_description">Retry button</string>
     <string name="movie_poster_description">Movie poster</string>
     <string name="top_rated">Top Rated</string>
