fix: sharing intent
Signed-off-by: Eduardo Carrara <ecarrara.araujo@gmail.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,5 +25,5 @@
     <string name="movie_list_poster_loading_error_message">Error Loading Movie Poster</string>
 
     <string name="trailer_sharing_chooser_title">Share trailer on …</string>
-    <string name="trailer_sharing_message">Check out this awesome trailer</string>
+    <string name="trailer_sharing_message">Check out this awesome trailer: %1$s</string>
 </resources>
